test/parser/should_fail/comments9.souc.bad
import DoCommens

; comments like this should not be allowed.

main() {; sup ;} = do
    x <- f $ 42 ; a comment
    print x

f(x) = do
    print x
